@@ -27,6 +27,7 @@ git-annex (8.20210311) UNRELEASED; urgency=medium
   * Fix build with attoparsec-0.14.
   * Improved display of errors when accessing a git http remote fails.
   * borg: Fix a bug that prevented importing keys of type URL and WORM.
+  * borg: Support importing files that are hard linked in the borg backup.
 
  -- Joey Hess <id@joeyh.name>  Fri, 12 Mar 2021 12:06:37 -0400
 
